--- a/Bookify.Web/Bookify.Web.csproj
+++ b/Bookify.Web/Bookify.Web.csproj
@@ -4,11 +4,12 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<UserSecretsId>aspnet-Bookify.Web-086B6F6B-4165-49DA-BFFD-EE73DC8E56AE</UserSecretsId>
+		<UserSecretsId>086B6F6B-4165-49DA-BFFD-EE73DC8E56AE</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.8" />
@@ -17,7 +18,12 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.2.0" />
 		<PackageReference Include="UoN.ExpressiveAnnotations.NetCore" Version="1.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\images\books\thumb\" />
 	</ItemGroup>
 
 </Project>
